[gd_scene load_steps=16 format=2]

[ext_resource path="res://data/asset scenes/phone_ui.gd" type="Script" id=1]
[ext_resource path="res://data/graphics/phone_ui.png" type="Texture" id=2]
[ext_resource path="res://data/graphics/phone_call.png" type="Texture" id=3]
[ext_resource path="res://data/graphics/phone_mail.png" type="Texture" id=4]
[ext_resource path="res://data/graphics/phone_internet.png" type="Texture" id=5]
[ext_resource path="res://data/graphics/phone_archive.png" type="Texture" id=6]
[ext_resource path="res://data/graphics/phone_time.png" type="Texture" id=7]
[ext_resource path="res://data/graphics/phone_calendar.png" type="Texture" id=8]
[ext_resource path="res://data/graphics/phone_games.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 31.2339

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 32.7649

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 31.3622

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 31.1558, 26.7208 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 31.9663, 28.0093 )

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 32.844

[node name="phone_ui" type="Area2D" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]
position = Vector2( 961.087, 1855.43 )
texture = ExtResource( 2 )

[node name="area" type="Area2D" parent="Sprite" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="Sprite/area" index="0"]

[node name="phone" type="Sprite" parent="." index="1"]
position = Vector2( 836.598, 2117.72 )
texture = ExtResource( 3 )

[node name="phone" type="Area2D" parent="phone" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="phone/phone" index="0"]
shape = SubResource( 1 )

[node name="mail" type="Sprite" parent="." index="2"]
position = Vector2( 918.361, 2116.83 )
texture = ExtResource( 4 )

[node name="mail" type="Area2D" parent="mail" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="mail/mail" index="0"]
shape = SubResource( 2 )

[node name="internet" type="Sprite" parent="." index="3"]
position = Vector2( 1002.32, 2116.55 )
texture = ExtResource( 5 )

[node name="internet" type="Area2D" parent="internet" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="internet/internet" index="0"]
shape = SubResource( 3 )

[node name="archive" type="Sprite" parent="." index="4"]
position = Vector2( 914.879, 1806.36 )
texture = ExtResource( 6 )

[node name="archive" type="Area2D" parent="archive" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="archive/archive" index="0"]
shape = SubResource( 4 )

[node name="time" type="Sprite" parent="." index="5"]
position = Vector2( 961.8, 1672.77 )
texture = ExtResource( 7 )

[node name="calendar" type="Sprite" parent="." index="6"]
position = Vector2( 1081.03, 2116.01 )
texture = ExtResource( 8 )

[node name="calendar" type="Area2D" parent="calendar" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="calendar/calendar" index="0"]
shape = SubResource( 5 )

[node name="games" type="Sprite" parent="." index="7"]
position = Vector2( 834.279, 1804.17 )
texture = ExtResource( 9 )

[node name="games" type="Area2D" parent="games" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="games/games" index="0"]
shape = SubResource( 6 )

[connection signal="input_event" from="phone/phone" to="." method="_on_phone_input_event"]
[connection signal="mouse_entered" from="phone/phone" to="." method="_on_phone_mouse_entered"]
[connection signal="mouse_exited" from="phone/phone" to="." method="_on_phone_mouse_exited"]
[connection signal="input_event" from="mail/mail" to="." method="_on_mail_input_event"]
[connection signal="mouse_entered" from="mail/mail" to="." method="_on_mail_mouse_entered"]
[connection signal="mouse_exited" from="mail/mail" to="." method="_on_mail_mouse_exited"]
[connection signal="input_event" from="internet/internet" to="." method="_on_internet_input_event"]
[connection signal="mouse_entered" from="internet/internet" to="." method="_on_internet_mouse_entered"]
[connection signal="mouse_exited" from="internet/internet" to="." method="_on_internet_mouse_exited"]
[connection signal="input_event" from="archive/archive" to="." method="_on_archive_input_event"]
[connection signal="mouse_entered" from="archive/archive" to="." method="_on_archive_mouse_entered"]
[connection signal="mouse_exited" from="archive/archive" to="." method="_on_archive_mouse_exited"]
[connection signal="input_event" from="calendar/calendar" to="." method="_on_calendar_input_event"]
[connection signal="mouse_entered" from="calendar/calendar" to="." method="_on_calendar_mouse_entered"]
[connection signal="mouse_exited" from="calendar/calendar" to="." method="_on_calendar_mouse_exited"]
[connection signal="input_event" from="games/games" to="." method="_on_games_input_event"]
[connection signal="mouse_entered" from="games/games" to="." method="_on_games_mouse_entered"]
[connection signal="mouse_exited" from="games/games" to="." method="_on_games_mouse_exited"]
